Added heap options